@@ -19,11 +19,13 @@ public class MostOccurances {
     }
 
     public List<String> modeNumbers(String input) {
-        if (input == null || input.isEmpty()) { //fixing bug in test
-            return List.of();
+        if (input == null || input.isEmpty()) { //fixing bug in test, so it works when there is no input, or empty input
+            return Collections.emptyList();
+
             //or you can say:
 //             new ArrayList<>();
 //             Collections.EMPTY_LIST;
+// List.of();
         }
         HashMap<String, Integer> map = check(input); //create new hashmap with value of output from previous method called check
 
@@ -31,9 +33,16 @@ public class MostOccurances {
         List<String> maxValues = new ArrayList<>(); //create list for MODE to be stored in. (list in case there are multiple modes)
 
         for (Map.Entry<String, Integer> entry : map.entrySet()) { //loop through entries (pairs of values and keys) from Hashmap (called map)
-            if (entry.getValue() >= max) { //check if value is greater than max
+            if (entry.getValue() > max) { //check if value is greater than max
+//                if (!maxValues.isEmpty()){
+//                    maxValues.removeAll(new ArrayList<>());
+//                }
+                maxValues.clear(); //if value is greater than max, empty list to get rid of lower value elements
                 max = entry.getValue(); //resetting max as value
-                maxValues.add(entry.getKey()); //add corresponding key from entry to list called maxValue
+                maxValues.add(entry.getKey()); //then add corresponding key from entry to list called maxValue
+            }
+            else if (entry.getValue() == max){
+                maxValues.add(entry.getKey());
             }
         }
 
